# Data_Engineering_Zoomcamp

./: .gitignore  README.md
docker/: Notes.md
docker/postgres/: docker-compose.yaml  ingest_data.py  notebook.ipynb  pyproject.toml
docker/simple-pipeline/: Dockerfile  list_files.py  pipeline.py
docker/uv-pipeline/: Dockerfile  pyproject.toml
